force-app/main/default/objects/WhatsApp_Template__mdt/WhatsApp_Template__mdt.object-meta.xml
<CustomObject>
    <label>WhatsApp Template</label>
    <pluralLabel>WhatsApp Templates</pluralLabel>
</CustomObject>