force-app/main/default/objects/WhatsApp_Template__mdt/fields/Language_Code__c.field-meta.xml
<CustomField>
    <fullName>Language_Code__c</fullName>
    <label>Language Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>