force-app/main/default/objects/WhatsApp_Template__mdt/fields/Variable_Count__c.field-meta.xml
<CustomField>
    <fullName>Variable_Count__c</fullName>
    <label>Variable Count</label>
    <length>40</length>
    <type>Text</type>
</CustomField>